Add clock above message box

--- a/app/ui-admin/client/adminFlex.html
+++ b/app/ui-admin/client/adminFlex.html
@@ -21,7 +21,7 @@
 				{{#if hasPermission 'view-user-administration'}}
 					{{> sidebarItem menuItem "Users" "team" "admin-users" "" }}
 				{{/if}}
-
+				
 				{{#each adminBoxOptions}}
 					{{#if permissionGranted}}
 						{{> sidebarItem menuItem label icon href "" }}
@@ -30,7 +30,7 @@
 			</ul>
 
 			{{#if hasSettingPermission}}
-				<h3 class="rooms-list__type">{{_ "Settings"}}</h3>
+				<h3 class="rooms-list__type">{{_ "sss"}}</h3>
 				<div class="rc-input sidebar-flex__search">
 					<label class="rc-input__label">
 						<div class="rc-input__wrapper">
