--- a/app/ui-message/client/messageBox/messageBox.html
+++ b/app/ui-message/client/messageBox/messageBox.html
@@ -1,5 +1,10 @@
 <template name="messageBox">
 	<div class="rc-message-box rc-new {{#if isEmbedded}}rc-message-box--embedded{{/if}}">
+		<div class="rc-message-box__rc-clock" style="display: flex; padding-bottom: 4px;" >
+			<div class="clockTimeET" style=" color: #000;; font-family: inherit;border-width: 1px;padding: 1px 4px; background: #ffffff;">{{ clockTimeIST}}</div>
+			<div class="clockTimeET" style=" color: #000; font-family: inherit; margin-left: 8px; border-width: 1px;padding: 1px 4px; background: #ffffff;">{{ clockTimeET}}</div>
+		</div>
+		
 		{{#unless isAnonymousOrMustJoinWithCode}}
 			{{#unless tmid}}
 				{{> messageBoxTyping rid=rid}}
@@ -18,7 +23,6 @@
 					{{/each}}
 					</div>
 				{{/if}}
-
 				<label class="rc-message-box__container">
 					<span class="rc-message-box__icon emoji-picker-icon {{#unless isEmojiEnabled}}emoji-picker-icon--disabled{{/unless}} js-emoji-picker" aria-haspopup="true">
 						{{> icon block="rc-input__icon-svg" icon="emoji"}}
